Scoring_Box/build/log/idf_py_stderr_output_43894
Command: make -j 6 all
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp: In function 'void sabre()':
/home/costa/Documents/Fencing_Scoring_Apparatus/Scoring_Box/main/main.cpp:325:15: error: 'ledc_timer' was not declared in this scope; did you mean 'ledc_timer_t'?
  325 |               ledc_timer.freq_hz = BUZZER_FREQ;
      |               ^~~~~~~~~~
      |               ledc_timer_t
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7295: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
